# CiRA-Quantum

./: .dockerignore  .gitignore  BENCHMARK_REPORT_001.md  BENCHMARK_REPORT_002.md  DECISIONS.md  LICENSE  PROJECT_TEMPLATE v2.md  PROJECT_TEMPLATE.md  README.md  ROADMAP.md
backend/: README.md  pyproject.toml  requirements.txt  run.py  worker.py
backend/app/: __init__.py  auth.py  config.py  crypto.py  models.py
backend/app/benchmarking/: __init__.py  cite.py  cloud_materialize.py  instances.py  pending_jobs.py  records.py  registry.py  run_suite.py  solve_job_materialize.py
backend/app/benchmarking/instances/: manifest.json
backend/app/benchmarking/schemas/: instance_v1.json  record_v1.json  solver_v1.json
backend/app/formulation/: __init__.py  base.py  classifier_prompt.py  claude.py  local.py  openai.py
backend/app/formulation/hardcoded/: __init__.py  max_cut.py  max_independent_set.py  number_partitioning.py  portfolio_selection.py  registry.py
backend/app/formulation/prompts/: examples.json  system.txt
backend/app/formulation/schemas/: cqm_v1.json
backend/app/optimization/: compiler.py  cpsat_sampler.py  gpu_sa.py  highs_sampler.py  interpreter.py  parallel_tempering_sampler.py  qaoa_cloud_sampler.py  qaoa_ibmq_sampler.py  qaoa_sampler.py  simulated_bifurcation_sampler.py  validation.py
backend/app/pipeline/: __init__.py  events.py  launcher.py  orchestrator.py  worker_entry.py
backend/app/qldpc/: __init__.py  code_families.py  generators.py  layouts.py  serializers.py
backend/app/qml/: __init__.py  ansatz_su2.py  baselines.py  data_loader.py  datasets.py  qpu_ibmq.py  qpu_originqc.py  records.py  trainer.py  vqc.py  worker_entry.py
backend/app/routes/: admin.py  auth.py  benchmarks.py  health.py  keys.py  qldpc.py  qml.py  solve.py  templates.py
backend/app/templates/: __init__.py  registry.py
backend/app/templates/schemas/: template_v1.json
backend/data/: pending_cloud_jobs.json
backend/scripts/: benchmark_experiment_001.py  benchmark_experiment_002.py  sweep_su2_brick_vs_basic_ry.py
backend/tests/: benchmark_gpu_vs_cpu.py  conftest.py  inspect_provider_outputs.py  manual_integration_test.py  test_auth.py  test_cite.py  test_classifier_prompt.py  test_compiler.py  test_cpsat_beats_gpu_sa.py  test_cpsat_sampler.py  test_crypto.py  test_events.py  test_formulation_base.py  test_formulation_claude.py  test_formulation_local.py  test_formulation_openai.py  test_gpu_sa.py  test_hardcoded.py  test_highs_sampler.py  test_interpreter.py  test_launcher.py  test_oracle_match.py  test_parallel_tempering.py  test_pipeline.py  test_pipeline_routing.py  test_qaoa_cloud_sampler.py  test_qaoa_ibmq_sampler.py  test_qaoa_sampler.py  test_qldpc_code_families.py  test_qldpc_generators.py  test_qldpc_layouts.py  test_qml_ansatz_su2.py  test_qml_ansatz_wiring.py  test_qml_baselines.py  test_qml_benchmarks.py  test_qml_data_loader.py  test_qml_launcher.py  test_qml_qpu_ibmq.py  test_qml_qpu_originqc.py  test_qml_trainer.py  (+13 more)
backend/tests/fixtures/: mock_claude_response.json  mock_openai_response.json
backend/tests/instances/: benchmark_1000var.json  graphcoloring_4node.json  jss_2job_2machine.json  jss_3job_3machine.json  jss_5job_5machine.json  knapsack_20item.json  knapsack_5item.json  maxcut_50node.json  maxcut_6node.json  medium_100var.json  setcover_4item.json  tiny_5var.json
benchmarks/: README.md
deploy/: .dockerignore  DEPLOY.md  Dockerfile  gunicorn_conf.py  wrangler.toml
deploy/migrations/: 0001_initial_schema.sql
deploy/nssm/: .env.example  ADD_NEW_SERVICE.md  DEPLOY_NSSM.md  cloudflared_ingress.yml  install_quantum_service.ps1
docs/: DEPLOYING_DOCKER_SERVICES.md  FEATURES.md  OPTIMIZATION.md
docs/reports/: production_deploy_day_2026-07-02.md  qaoa_hybrid_loop_wukong_2026-07-01.html
docs/research_notes/: 2501.07387_guo_yang_circuit_compilation.md  sweep_su2_brick_results.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: quantum101_grid.json
frontend/public/quirk/: NOTICE
frontend/src/: App.vue  main.ts
frontend/src/components/: ApiKeyManager.vue  ApprovalPanel.vue  AuthDialog.vue  BaselineComparison.vue  BlochSphereDemo.vue  ChangePasswordForm.vue  CiraLogo.vue  CitationButton.vue  ClassicalExplainerPanel.vue  DatasetScatterPlot.vue  DecisionBoundaryPlot.vue  JobHistory.vue  MatrixViewer.vue  MultiSolverResultDisplay.vue  PendingCloudJobsPanel.vue  ProblemInput.vue  QaoaCodePreview.vue  QaoaExplainerPanel.vue  QpuRunPanel.vue  QuirkPlayground.vue  ReproducibilityBadge.vue  ResultDisplay.vue  SolveStatus.vue  SolverComparisonTable.vue  SolverMatchRateChart.vue  SolverMeanTimeChart.vue  SolverPicker.vue  TannerGraphViewer.vue  TemplateCard.vue  TemplateDetailModal.vue  TemplateMatchBadge.vue  TimeQualityScatter.vue  TrainingLossChart.vue  VqcCircuitExplainer.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  benchmarks.ts  qldpc.ts  qml.ts  solve.ts  templates.ts
frontend/src/views/: AdminPage.vue  BenchmarkDashboardPage.vue  BenchmarkFindingsPage.vue  BenchmarkInstancePage.vue  BenchmarkSolverPage.vue  BenchmarkSuitePage.vue  JobDetailPage.vue  LandingPage.vue  LoginPage.vue  MainApp.vue  PlaygroundPage.vue  QldpcCodeFamilyDetailPage.vue  QldpcLandingPage.vue  QldpcLearnPage.vue  QmlBenchmarkDashboardPage.vue  QmlBenchmarkRecordPage.vue  QmlDatasetDetailPage.vue  QmlJobDetailPage.vue  QmlLandingPage.vue  QmlLearnPage.vue  Quantum101Page.vue  SettingsPage.vue  SignupPage.vue  TemplateGalleryPage.vue
