[project]
name = "cira-quantum-backend"
version = "0.1.0"
description = "CiRA Quantum — GPU simulated annealing sampler (Phase 1)"
requires-python = ">=3.12"
readme = "README.md"

# Torch is intentionally not declared here because it must be installed
# from the cu128 wheel index. See README for the install command.
#
# Triton is required by `torch.compile` (the kernel="compile" path in
# `gpu_sa.py`). On Linux the official `triton` PyPI package works; on
# Windows the official upstream does not ship wheels, so we use the
# community-maintained `triton-windows` build instead. Markers select
# the right one per platform automatically.
dependencies = [
    "dimod>=0.12,<0.13",
    "dwave-samplers>=1.2,<2.0",
    "numpy>=1.26,<3.0",
    # Phase 3 — formulation provider layer.
    "httpx>=0.27,<1.0",
    "jsonschema>=4.20,<5.0",
    "cryptography>=42,<47",
    # Phase 0 — Flask shell.
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<7.0",
    "werkzeug>=3.0,<4.0",
    # Phase 8 — classical solver tiers (CP-SAT, HiGHS) as registered
    # dimod.Sampler adapters. Both are CQM-native.
    "ortools>=9.10,<10.0",
    "highspy>=1.7,<2.0",
    # Production WSGI server. Cross-platform (works on Windows where
    # gunicorn's fork model can't) and thread-pool-based, so SSE
    # streams and long-lived LLM/QPU calls behave correctly. Dev still
    # runs Flask's built-in server via ``python run.py``; the NSSM
    # service on quantum.cira-core.com invokes waitress directly.
    "waitress>=3.0,<4.0",
]

[project.optional-dependencies]
# Phase 9C — Simulated Bifurcation (Goto et al. 2019, the open
# algorithm behind Fujitsu's SQBM+). Wrapped as a dimod.Sampler in
# ``optimization/simulated_bifurcation_sampler.py`` and registered
# only in the benchmarking harness (try/except-guarded — the
# production solve path degrades cleanly when the import fails).
#
# Moved out of base deps 2026-07-02 because the transitive dep chain
# pulls torch + full CUDA toolkit (~4-5 GB), which is dead weight in
# the Cloudflare Container image. Reinstall via
# ``pip install ".[classical-extras]"`` for local benchmarking.
classical-extras = [
    "simulated-bifurcation>=2.0,<3.0",
]

# GPU simulated annealing (``optimization/gpu_sa.py``). Requires triton
# for the ``kernel="jit"`` / ``kernel="compile"`` paths. Moved out of
# base deps 2026-07-02 because we're not shipping GPU SA in the
# production image (CPSAT beats it on the instance sizes we actually
# ship — see backend/tests/test_cpsat_beats_gpu_sa.py). Install for
# local benchmarking with ``pip install ".[gpu]"``. Note: torch itself
# is not declared here because it must be installed from the cu128 or
# cpu wheel index depending on the target — see backend/README.md.
gpu = [
    "triton>=3.0; platform_system != 'Windows'",
    "triton-windows>=3.0; platform_system == 'Windows'",
]

dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.5,<1.0",
    # Phase 6 — fakeredis lets the RQ-backed launcher path be tested
    # without a running Redis server. Real production uses real Redis.
    "fakeredis>=2.20,<3.0",
]

# Phase 6 — async job queue via Redis-RQ. Opt-in: set USE_REDIS_QUEUE=1
# and configure REDIS_URL. When the env flag is unset the launcher
# falls back to the in-process daemon-thread path (no Redis required).
#
# Install:  pip install ".[queue]"
# Then run:  python -m rq.cli worker --url $REDIS_URL cira-quantum-solves
queue = [
    "rq>=1.16,<2.0",
    "redis>=5.0,<7.0",
]
# Phase 9A — quantum tier (OriginQC pyqpanda QAOA on local CPU
# simulator). Optional because pyqpanda is large and most contributors
# won't exercise this tier. `bootstrap_default_solvers()` registers
# `qaoa_sim` only when the import succeeds.
#
# Install:  pip install ".[quantum]"
quantum = [
    "pyqpanda3>=0.3,<1.0",
    "pyqpanda_alg>=2.0,<3.0",
    "sympy>=1.12,<2.0",
    # pyqpanda_alg's package __init__ eagerly imports its QSVR
    # submodule, which does ``import sklearn`` at module load time.
    # Without scikit-learn installed, ``import pyqpanda_alg.QAOA.qaoa``
    # (used by the qaoa_originqc sampler) fails with ModuleNotFoundError
    # even though our code never touches QSVR. Upstream should declare
    # this as a hard dep; until they do, we carry it here so a
    # ``pip install .[quantum]`` gives you a working Origin QAOA path.
    "scikit-learn>=1.4,<2.0",
]

# Phase 11 — IBM Quantum cloud QAOA via Qiskit Runtime. Optional
# because qiskit + qiskit-ibm-runtime add ~150 MB and not every
# install needs the IBM tier. Local training is Qiskit-pure
# (StatevectorSampler + scipy.optimize), so this group also pulls
# scipy.
#
# Install:  pip install ".[ibm-quantum]"
ibm-quantum = [
    "qiskit>=1.2,<2.0",
    "qiskit-ibm-runtime>=0.21,<1.0",
    "scipy>=1.11,<2.0",
]

# QML — Quantum Machine Learning sister app (QML-1 onward).
# PennyLane is the primary training backend (chosen for its tutorial
# ecosystem and autograd-style API). scikit-learn drives the classical
# baselines (QML-3) and supplies the canonical datasets. matplotlib is
# used by the educational explainer (QML-4) to render decision
# boundaries.
#
# Install:  pip install ".[qml]"
qml = [
    "pennylane>=0.35,<1.0",
    "scikit-learn>=1.4,<2.0",
    "matplotlib>=3.8,<4.0",
]

# qLDPC — Quantum Low-Density Parity-Check codes sister app
# (Sprint 0 onward). Sprint 1 adds the math stack: qLDPCOrg's
# `qldpc` package for code family construction + distance, sympy
# for the bivariate-bicycle polynomial DSL, and networkx for
# Tanner graph export (also reused by Sprint 2 layout viz).
# Sprint 3 will add stim / sinter; Sprint 4 will add qiskit-qec.
#
# GAP is optional in the upstream lib — our default constructors
# and `get_distance(bound=True)` work without it on Windows. We
# do NOT pin GAP here.
#
# Install:  pip install ".[qldpc]"
qldpc = [
    "qldpc>=0.2.9,<0.3",
    "sympy>=1.12,<2",
    "networkx>=3.0,<4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/instances"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length is enforced via formatter, not lint
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
